--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.24"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
